# Windrow-Centerline-ROS2-Node

./: CMakeLists.txt  README.md  package.xml
eval/: PLOTTING_GUIDE.md  centerline_agreement_analyzer.py  launch_agreement_analysis.sh  plot_from_summary.py
eval/centerline_analysis/: analysis_summary.json  analysis_summary.txt
pcd/: ouster_frame_000.pcd  zed2i_frame_000.pcd
src/: windrow_centerline_centroid_node.cpp  windrow_centerline_node.cpp
